--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-duckduckgo-search
-python-whois
-dnspython
-tldextract
-requests
-beautifulsoup4
-openai==1.*
+streamlit>=1.32
+duckduckgo-search>=6.1.0
+python-whois>=0.9.3
+dnspython>=2.4.2
+tldextract>=5.1.2
+requests>=2.31.0
+beautifulsoup4>=4.12.2
+openai>=1.30,<2.0
